tests/expectations/compiler/const_prop/loop_bounds_fail.out
DCE_ENABLED:
Error [ECMP0376008]: This loop bound could not be determined at compile time.
    --> compiler-test:11:38
     |
  11 |             for j: u32 in SOME+1u32..STOP+a {
     |                                      ^^^^^^

DCE_DISABLED:
Error [ECMP0376008]: This loop bound could not be determined at compile time.
    --> compiler-test:11:38
     |
  11 |             for j: u32 in SOME+1u32..STOP+a {
     |                                      ^^^^^^
